--- a/README
+++ b/README
@@ -6,3 +6,20 @@ heroku rake sunspot:reindex
 
 regenerate css
 rake asset:packager:build_all
+
+Financials:
+  $36   1 Job runner
+  $20   Websolr Silver
+  $5    SNI SSL
+  $15   15gb Shared database
+  $2    Hoptoad Plus
+ = $78
+
+Realistic:
+$36   1 Job runner
+$20   Websolr Silver
+$5    SNI SSL
+$15   15gb Shared database
+$7    Hoptoad Plus
+$20   Memcached
+  = $103
